# mento

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  Concrete beam flexure check ACI 318-19.docx  Concrete beam shear check ACI 318-19.docx  Concrete beam shear check EHE-08.docx  Concrete beam shear check EN 1992-2004.docx  LICENSE  README.md  duplicados_pdfs.txt  makefile  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  summar shear wall plan.md  test_concrete.py  test_concrete_piles.py  test_pdf.py  ~$ncrete beam flexure check ACI 318-19.docx  ~$ncrete beam shear check EHE-08.docx
.claude/: settings.local.json
.claude/commands/: ship.md
.github/.github/workflows/: ci.yaml
.github/workflows/: tests.yml
docs/: Makefile  docs_codes.ipynb  index.rst  requirements_docs.txt
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api/: mento.codes.rst  mento.concrete.rst  mento.rst  modules.rst
docs/source/dev/: codeofconduct.rst  contributing.rst
docs/source/examples/: OneWaySlab_check_ACI_318-19.ipynb  beam_summary.ipynb  beam_summary_ACI_318-19 Design.ipynb  beam_summary_ACI_318-19.ipynb  beam_summary_EN_1992-1-1.ipynb  flexure_examples.rst  index.rst  rectangular_beam_check.ipynb  rectangular_beam_check_ACI_318-19.ipynb  rectangular_beam_check_EN_1992-1-1.ipynb  rectangular_beam_design_ACI_318-19.ipynb  rectangular_beam_design_EN_1992-1-1.ipynb  shear_wall_check_ACI_318-19.ipynb  shear_wall_design_ACI_318-19.ipynb  shear_wall_summary_ACI_318-19 Design.ipynb  (+1 more)
mento/: __init__.py  _version.py  beam.py  column.py  forces.py  material.py  node.py  punching.py  rebar.py  rectangular.py  results.py  section.py  settings.py  shear wall plan.md  shear_wall.py  shear_wall_summary.py  slab.py  summary.py  units.py
mento/PDF/: page_numbers.py  pdf_tools.py
mento/codes/: ACI_318_19_beam.py  ACI_318_19_wall.py  EN_1992_2004_beam.py  __init__.py  eurocode.py
mento/concrete/: beam.py  rectangular.py  section.py
structurelab/: forces.py  material.py  node.py  rebar.py  results.py  section.py  settings.py
structurelab/PDF/: extract_pages.py  merge_background.py  merge_by_folder.py  merge_by_name.py  page_numbers.py  pdf_tools.py
structurelab/common/: materials.py
structurelab/concrete/: beam.py  concrete_piles.py  rectangular.py  section.py
tests/: modules_testing.py  test_beam.py  test_forces.py  test_init.py  test_material.py  test_node.py  test_punching.py  test_rebar.py  test_rectangular.py  test_results.py  test_section.py  test_settings.py  test_shear_wall.py  test_shear_wall_summary.py  test_slab.py  test_summary.py  test_units.py
tests/concrete/: test_beam.py
tests/examples/: Concrete_beams.ipynb  DF_check.xlsx  DF_checl.xlsx  DF_output.docx  Mento-Input.xlsx  Pylatex_test.tex  example_concrete.py  example_pdf.py  materials_report.docx  pylate_test.tex  pylatex_example.tex  report_example - Beams.ipynb  report_example.html  report_example.ipynb  report_example.md
(+16 files in other folders)
