[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mento"
version = "0.2.3"
description = "An intuitive tool for structural engineers to design concrete elements efficiently."
readme = "README.md"
authors = [
    {name = "Mehdí Caballero", email = "mihdicaballero@gmail.com"},
    {name = "Juan Pablo Romaris", email="jpromaris@yahoo.com.ar"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
requires-python = ">=3.10"
keywords = [
    "concrete design",
    "structural engineering",
    "structural analysis",
]

[project.urls]
"Homepage" = "https://github.com/mihdicaballero/mento"

[tool.setuptools]
packages = ["mento", "mento.codes"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }


[tool.pylint]
disable = [
    "too-many-locals",
    "too-many-arguments",
    "too-many-statements",
]
max-line-length = 120

[tool.ruff]
extend-select = ["C4", "SIM", "TCH"]
extend-exclude = ["build/", "dist/"]
ignore = []
show-fixes = true
line-length = 120

[tool.mypy]
packages = ["mento"]
python_version = "3.10"
strict = true
allow_any_generics = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
target-version = ['py310', 'py311', 'py312']
